--- a/app/src/main/res/layout/home_recycler_original_adapter_item.xml
+++ b/app/src/main/res/layout/home_recycler_original_adapter_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:layout_marginBottom="8dp"
     android:background="@color/colorAccent2">
 
     <include layout="@layout/home_weiboitem_titlebar"/>
