--- a/app/src/main/res/layout/home_weiboitem_titlebar.xml
+++ b/app/src/main/res/layout/home_weiboitem_titlebar.xml
@@ -6,8 +6,8 @@
 
         <ImageView
             android:id="@+id/im_head"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="40dp"
+            android:layout_height="@dimen/dp_40"
             android:layout_margin="5dp"
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
