home Fragment bind click

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -12,6 +12,7 @@
             app:leftButton="Gone"
             app:rightButton="Gone"
             app:middleTextName="@string/关注"
+            app:middleTextColor="@color/colorAccent"
             app:layout_scrollFlags="scroll|enterAlways|snap">
         </com.example.zhong.lasagna.common.MyToolBar>
     </android.support.design.widget.AppBarLayout>
