--- a/app/src/main/res/layout/mainfragment_weiboitem_bottombar.xml
+++ b/app/src/main/res/layout/mainfragment_weiboitem_bottombar.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal">
 
     <LinearLayout
+        android:id="@+id/ll_forward"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -23,6 +24,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_comment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -40,6 +42,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_like"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
