--- a/app/src/main/res/layout/my_tool_bar.xml
+++ b/app/src/main/res/layout/my_tool_bar.xml
@@ -5,7 +5,7 @@
     <Button
         android:id="@+id/bt_left"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/tv_middle"
         android:layout_width="0dp"
@@ -15,6 +15,6 @@
     <Button
         android:id="@+id/bt_right"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 </merge>
