--- a/app/src/main/res/layout/tool_mine.xml
+++ b/app/src/main/res/layout/tool_mine.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/toolbar_mine"
     android:layout_width="match_parent"
-    android:layout_height="45dp"
+    android:layout_height="@dimen/ToolBarHeight"
     android:background="@color/colorPrimary">
     <TextView
-        android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:text="发现群"
+        android:layout_marginLeft="8dp"
+        android:text="添加朋友"
         android:textColor="@color/colorAccent"
         android:textSize="18sp" />
 
@@ -20,8 +20,19 @@
         android:layout_centerInParent="true"
         android:layout_margin="8dp"
         android:gravity="center"
-        android:text="消息"
+        android:text="我"
         android:textColor="@color/colorAccent"
         android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/setting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="8dp"
+        android:text="设置"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp" />
 
 </RelativeLayout>
