--- a/app/src/main/res/layout/mainfragment_weiboitem_retweet_pictext.xml
+++ b/app/src/main/res/layout/mainfragment_weiboitem_retweet_pictext.xml
@@ -24,7 +24,7 @@
         android:id="@+id/retweetStatus_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent1"
+        android:background="@drawable/home_retweet_weiboitem_bg_auto"
         android:orientation="vertical"
         android:paddingBottom="10dp"
         android:paddingTop="10dp">
